force-app/main/default/objects/FormTargetObject__c/FormTargetObject__c.object-meta.xml
<CustomObject>
    <label>Objeto Alvo do Formulário</label>
    <nameField>
        <displayFormat>OA-{000000}</displayFormat>
        <label>Nome de Objeto Alvo do Formulário</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objeto Alvo do Formulário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>