force-app/main/default/objects/FormTargetObject__c/fields/ConditionField__c.field-meta.xml
<CustomField>
    <fullName>ConditionField__c</fullName>
    <label>Campo da Condição</label>
    <type>TextArea</type>
</CustomField>