force-app/main/default/objects/FormTargetObject__c/fields/ConditionObject__c.field-meta.xml
<CustomField>
    <fullName>ConditionObject__c</fullName>
    <label>Objeto da Condição</label>
    <type>TextArea</type>
</CustomField>