force-app/main/default/objects/FormTargetObject__c/fields/ConditionValue__c.field-meta.xml
<CustomField>
    <fullName>ConditionValue__c</fullName>
    <label>Valor da Condição</label>
    <type>TextArea</type>
</CustomField>