force-app/main/default/objects/FormTargetObject__c/fields/FormField__c.field-meta.xml
<CustomField>
    <fullName>FormField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pergunta do Formulário</label>
    <referenceTo>FormField__c</referenceTo>
    <relationshipLabel>Objeto Alvo do Formulário</relationshipLabel>
    <relationshipName>Objeto_Alvo_do_Formul_rio</relationshipName>
    <type>Lookup</type>
</CustomField>