force-app/main/default/objects/FormTargetObject__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operators</valueSetName>
    </valueSet>
</CustomField>